objects/Shipment_Line_Item__c/Shipment_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This Shipment Line Item object is child object of Shipment  object</description>
    <label>Shipment Line Item</label>
    <nameField>
        <displayFormat>SLI-{00000}</displayFormat>
        <label>Shipment Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>