objects/Shipment_Line_Item__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>IF(($Setup.ProductionEstimate__c.Active__c==True), Production_Estimate__r.Job__r.JS_Client__r.Name,   Estimate_Line_Item__r.Job__r.JS_Client__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>