objects/Shipment_Line_Item__c/fields/Estimate_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Line Item</label>
    <referenceTo>Estimate_Line_Items__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>