objects/Shipment_Line_Item__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>