objects/Shipment_Line_Item__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <formula>IF(($Setup.ProductionEstimate__c.Active__c==True), Production_Estimate__r.Job__r.Job_Auto_Number__c,  Estimate_Line_Item__r.Job__r.Job_Auto_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job #</label>
    <type>Text</type>
</CustomField>