objects/Shipment_Line_Item__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <formula>IF(($Setup.ProductionEstimate__c.Active__c == True), Production_Estimate__r.Job__r.Name ,  Estimate_Line_Item__r.Job__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>