objects/Shipment_Line_Item__c/fields/Production_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Production_Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Name</label>
    <referenceTo>Production_Estimate__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>