objects/Shipment_Line_Item__c/fields/Qty_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Qty_Shipped__c</fullName>
    <label>Qty Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>