objects/Shipment_Line_Item__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>